# aoc_2024

./: pyproject.toml
src/day1/: main.py
src/day10/: main.py
src/day11/: main.py
src/day12/: .excalidraw  example5.txt  main.py
src/day13/: .excalidraw  example2.txt  main.py
src/day2/: main.py
src/day3/: main.py
src/day4/: main.py
src/day5/: .excalidraw  main.py
src/day6/: main.py
src/day7/: .excalidraw  main.py
src/day8/: main.py
src/day9/: main.py
