[project]
name = "aoc-2024"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mypy>=1.14.0",
    "numpy>=2.2.1",
    "tqdm>=4.67.1",
    "types-tqdm>=4.67.0.20241221",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812", "COM819",
    "E111", "E114", "E117",
    "ISC001", "ISC002",
    "Q000", "Q001", "Q002", "Q003",
    "W191", 
    "D", 
    "S101",
    "T201", 
    "F821", 
    "PLR2004"]